# auth-fastapi-jwt-youtube

./: .env  alembic.ini  docker-compose.yml  pyproject.toml
app/: auth_user.py  depends.py  main.py  routes.py  schemas.py
app/db/: connection.py  models.py
migrations/: env.py
migrations/versions/: 075f1853f8dc_add_users_table.py
